// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders 1`] = `
.emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

.emotion-5 {
  position: relative;
  display: inline-block;
}

<Tooltip
  id="renders"
  trigger="trigger"
>
  <span
    aria-describedby="renders"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="renders"
          open={false}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={false}
      preferredDirections={
        Array [
          "top-center",
          "bottom-center",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

<body>
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

<div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={false}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={false}
                    >
                      <TooltipContent
                        direction="top-center"
                        id="renders"
                        open={false}
                      >
                        <div
                          aria-hidden={true}
                          className="
    emotion-0    emotion-1   emotion-2"
                          id="renders"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders open tooltip 1`] = `
.emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

.emotion-5 {
  position: relative;
  display: inline-block;
}

<Tooltip
  id="opened"
  open={true}
  trigger="trigger"
>
  <span
    aria-describedby="opened"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="opened"
          open={true}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={true}
      preferredDirections={
        Array [
          "top-center",
          "bottom-center",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

.emotion-7 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<body>
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="emotion-7"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={true}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={true}
                    >
                      <TooltipContent
                        direction="top-center"
                        id="opened"
                        open={true}
                      >
                        <div
                          aria-hidden={false}
                          className="
    emotion-0    emotion-1   emotion-2"
                          id="opened"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;

exports[`Tooltip renders with preferred directions 1`] = `
.emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

.emotion-5 {
  position: relative;
  display: inline-block;
}

<Tooltip
  id="customDir"
  open={true}
  preferredDirections={
    Array [
      "bottom-left",
    ]
  }
  trigger="trigger"
>
  <span
    aria-describedby="customDir"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    tabIndex={0}
  >
    <Dropdownable
      dropdown={
        <TooltipContent
          id="customDir"
          open={true}
        >
          content
        </TooltipContent>
      }
      onClose={[Function]}
      open={true}
      preferredDirections={
        Array [
          "bottom-left",
        ]
      }
    >
      <Styled(div)>
        <div
          className="emotion-5"
        >
          <div>
            trigger
          </div>
          <Overlay
            className="emotion-3"
            overlayRoot={
              .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  opacity: 0;
  z-index: 2;
}

.emotion-11 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

.emotion-7 {
  top: 0px;
  left: NaNpx;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<body>
                <div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="true"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="renders"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="emotion-7"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="opened"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    class="emotion-11"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-8    emotion-9   emotion-2"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Portal
              containerInfo={
                .emotion-2 {
  background-color: #32363E;
  border-radius: 2px;
  box-sizing: border-box;
  font-size: 12px;
  position: relative;
  color: #DADDE2;
  fill: #DADDE2;
  padding-left: 12px;
  padding-right: 12px;
  padding-bottom: 8px;
  padding-top: 8px;
}

.emotion-2:after {
  position: absolute;
}

.emotion-3 {
  top: 0px;
  left: 0px;
  position: absolute;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1;
  z-index: 2;
}

<div>
                  <div
                    class="emotion-3"
                  >
                    <div>
                      <div
                        aria-hidden="false"
                        class="
    emotion-0    emotion-1   emotion-2"
                        id="customDir"
                        role="tooltip"
                      >
                        content
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <div
                className="emotion-3"
              >
                <div>
                  <clickOutside(DropdownContents)
                    onClose={[Function]}
                    open={true}
                  >
                    <DropdownContents
                      onClose={[Function]}
                      open={true}
                    >
                      <TooltipContent
                        direction="bottom-left"
                        id="customDir"
                        open={true}
                      >
                        <div
                          aria-hidden={false}
                          className="
    emotion-0    emotion-1   emotion-2"
                          id="customDir"
                          role="tooltip"
                          style={
                            Object {
                              "maxWidth": undefined,
                              "minWidth": undefined,
                            }
                          }
                        >
                          content
                        </div>
                      </TooltipContent>
                    </DropdownContents>
                  </clickOutside(DropdownContents)>
                </div>
              </div>
            </Portal>
          </Overlay>
        </div>
      </Styled(div)>
    </Dropdownable>
  </span>
</Tooltip>
`;
